# lab12

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
artifacts/: .travis.yml
